--- a/src/css/input.css
+++ b/src/css/input.css
@@ -87,21 +87,21 @@
 	@apply p-4;
 }
 .article-title {
-	@apply text-2xl font-medium text-gray-500 dark:text-gray-100 transition duration-300
-	group-hover:text-gray-900 -mt-2 mb-4;
+	@apply text-2xl font-medium text-gray-900 dark:text-gray-200 transition duration-300
+	group-hover:text-white -mt-2 mb-4;
 }
 .article-description {
-	@apply text-gray-400 transition duration-300 group-hover:text-gray-700;
+	@apply text-gray-400 transition duration-300 group-hover:text-white/80;
 }
 .article-image {
 	@apply w-44 h-44 object-cover rounded-l-lg transition duration-300 order-first;
 }
 .form-container {
-	@apply lg:w-1/3 rounded-lg shadow-lg bg-slate-200/40 shadow-slate-400/30 px-6 py-8 mt-16 mb-112
+	@apply lg:w-1/3 rounded-lg shadow-lg bg-slate-200/40 shadow-slate-400/30 px-6 py-8 mt-16
 	lg:self-start dark:bg-slate-700/20 dark:shadow-slate-900/30;
 }
 .form-header {
-	@apply mb-8 text-2xl font-bold uppercase text-blue-800/80 dark:text-white/50;
+	@apply mb-8 text-2xl font-bold uppercase text-blue-800/80 dark:text-white/70;
 }
 .form-group {
 	@apply mb-6;
@@ -121,29 +121,49 @@
 	@apply block w-full px-4 py-4 font-medium uppercase bg-blue-500 text-white text-center
 	transition rounded shadow hover:shadow-lg hover:shadow-blue-700 focus:outline-none dark:text-gray-900;
 }
-.footer {
-	@apply max-w-sm w-full bg-gray-100 rounded-lg shadow-sm dark:bg-gray-600 p-4 md:p-6;
+.pagination-container {
+	@apply mt-14 mb-10;
 }
-.footer_container {
-	@apply flex justify-between;
+.pagination-list {
+	@apply flex justify-center;
 }
-.footer-container__item {
+.pagination-link {
+	@apply block px-3 py-1 border border-gray-300 text-gray-500 transition duration-300 hover:bg-gray-100
+	hover:text-gray-900 dark:border-gray-700 dark:hover:bg-gray-700 dark:hover:text-gray-100;
+}
+.stat_container {
+	@apply border-t border-gray-200 dark:border-gray-700 pt-10 mt-10 -mb-5;
+}
+.stat-container__item {
 	@apply flex items-center px-2.5 py-0.5 text-base font-semibold text-green-500 dark:text-green-500 text-center;
 }
-.footer__dropndown {
+.stat__dropndown {
 	@apply grid grid-cols-1 items-center border-gray-200 border-t dark:border-gray-700 justify-between;
 }
-.footer-dropndown__item {
+.stat-dropndown__item {
 	@apply flex justify-between items-center pt-5;
 }
 .dropndown__btn {
-	@apply text-sm font-medium text-gray-500 dark:text-gray-400 hover:text-gray-900 text-center inline-flex items-center dark:hover:text-white;
+	@apply text-sm font-medium text-gray-500 dark:text-white/50 hover:text-gray-900 text-center
+	inline-flex items-center dark:hover:text-white;
 }
 .dropndown__container {
 	@apply z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44 dark:bg-gray-700;
 }
 .dropndown__item {
 	@apply block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white;
+}
+.footer {
+	@apply border-t border-gray-200 dark:border-gray-700 py-10 mt-10;
+}
+.footer-container {
+	@apply flex flex-col sm:flex-row gap-x-48 gap-y-10;
+}
+.footer-header {
+	@apply font-medium text-gray-700 dark:text-gray-300 mb-4 text-lg;
+}
+.footer-link {
+	@apply block py-1 text-gray-700 transition-colors duration-300 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300;
 }
 .visually-hidden {
 	position: absolute;
